--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<link rel="icon" type="image/ico" href="" />
 		<title>Document</title>
 	</head>
-	<body>
+	<body class="g-page">
 		<header class="g-header">
 			<nav class="g-header__nav">
 				<figure>
@@ -69,9 +69,9 @@
 		</aside>
 		<!-- Loader -->
 		<section class="g-loader">
-			<div></div>
-			<div></div>
-			<div></div>
+			<div class="a-circle g-loader__circle"></div>
+			<div class="a-circle g-loader__circle"></div>
+			<div class="a-circle g-loader__circle"></div>
 		</section>
 		<!-- Modal -->
 		<section></section>
@@ -85,7 +85,8 @@
 			<figure>
 				<img src="" alt="" title="" />
 			</figure>
-		</footer>
+		</footer>hea
+		<script type="module" src="./index.ts"></script>
 		<script type="application/ld+json">
 			{
 				"@context": "http://schema.org/",
