--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<figure>
 				<img src="" alt="" title="" />
 			</figure>
-		</footer>hea
+		</footer>
 		<script type="module" src="./index.ts"></script>
 		<script type="application/ld+json">
 			{
