:white_check_mark: Clase N°5: Navbar.

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
 	<body class="g-page">
 		<header class="g-header">
 			<nav class="g-header__nav">
-				<figure>
-					<img src="" alt="" title="" />
+				<figure class="g-header__img">
+					<img src="./assets/proyect/lego-logo.png" alt="Logo de Lego" title="Logo de Lego" />
 				</figure>
-				<ul>
+				<ul class="g-header__links-container">
 					<li>
-						<a href="">EXCLUSIVOS</a>
+						<a class="g-header__link" href="">EXCLUSIVOS</a>
 					</li>
 					<li>
-						<a href="">NUEVOS</a>
+						<a class="g-header__link" href="">NUEVOS</a>
 					</li>
 					<li>
-						<a href="">GIFT CARDS</a>
+						<a class="g-header__link" href="">GIFT CARDS</a>
 					</li>
 					<li>
-						<a href="">FIND A STORE</a>
+						<a class="g-header__link" href="">FIND A STORE</a>
 					</li>
 				</ul>
 			</nav>
