:white_check_mark: Clase N°6: Contenido principal.

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 		</header>
 
 		<main class="g-main-content">
-			<h1>Súper Héroe</h1>
-			<h2>Diseña tu</h2>
-			<p>
+			<h1 class="g-main-content__title">Súper Héroe</h1>
+			<h2 class="g-main-content__subtitle">Diseña tu</h2>
+			<p class="g-main-content__description">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
 				mollitia magni obcaecati nemo at iure commodi eos, neque dolore
 				similique corporis. Tempore aut laborum doloribus sed asperiores
