:white_check_mark: Clase N°7: Contenido lateral.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 		<header class="g-header">
 			<nav class="g-header__nav">
 				<figure class="g-header__img">
-					<img src="./assets/proyect/lego-logo.png" alt="Logo de Lego" title="Logo de Lego" />
+					<img
+						src="./assets/proyect/lego-logo.png"
+						alt="Logo de Lego"
+						title="Logo de Lego"
+					/>
 				</figure>
 				<ul class="g-header__links-container">
 					<li>
@@ -60,12 +64,16 @@
 			</p>
 		</main>
 
-		<aside class="g-seide-content">
-			<p>Superman</p>
-			<figure>
-				<img src="" alt="" title="" />
+		<aside class="g-side-content">
+			<div class="g-side-content__box"></div>
+			<h2 class="g-side-content__title">Superman</h2>
+			<figure class="g-side-content__img">
+				<img
+					src="./assets/proyect/super-man.png"
+					alt="Superman realizado con legos"
+					title="Superman realizado con legos"
+				/>
 			</figure>
-			<div></div>
 		</aside>
 		<!-- Loader -->
 		<section class="g-loader">
