:white_check_mark: Clase N°8: Footer.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<nav class="g-header__nav">
 				<figure class="g-header__img">
 					<img
-						src="./assets/proyect/lego-logo.png"
+						src="./assets/proyect/lego-logo.webp"
 						alt="Logo de Lego"
 						title="Logo de Lego"
 					/>
@@ -69,9 +69,9 @@
 			<h2 class="g-side-content__title">Superman</h2>
 			<figure class="g-side-content__img">
 				<img
-					src="./assets/proyect/super-man.png"
+					src="./assets/proyect/super-man.webp"
 					alt="Superman realizado con legos"
-					title="Superman realizado con legos"
+					title="Superman hecho de legos"
 				/>
 			</figure>
 		</aside>
@@ -82,17 +82,46 @@
 			<div class="a-circle g-loader__circle"></div>
 		</section>
 		<!-- Modal -->
-		<section></section>
-		<footer>
-			<figure>
-				<img src="" alt="" title="" />
-			</figure>
-			<figure>
-				<img src="" alt="" title="" />
-			</figure>
-			<figure>
-				<img src="" alt="" title="" />
-			</figure>
+		<!-- <section></section> -->
+		<footer class="g-footer">
+			<ul class="g-footer__characters">
+				<li class="g-footer__list">
+					<button class="g-footer__btn">
+						<figure class="g-footer__img-container">
+							<img
+								class="g-footer__img"
+								src="./assets/proyect/spiderman.webp"
+								alt="Spiderman hecho de legos"
+								title="Spiderman hecho de legos"
+							/>
+						</figure>
+					</button>
+				</li>
+				<li class="g-footer__list">
+					<button class="g-footer__btn">
+						<figure class="g-footer__img-container">
+							<img
+								class="g-footer__img"
+								src="./assets/proyect/robin.webp"
+								alt="Robin hecho de legos"
+								title="Robin hecho de legos"
+							/>
+						</figure>
+					</button>
+				</li>
+				<li class="g-footer__list">
+					<button class="g-footer__btn">
+						<figure class="g-footer__img-container">
+							<img
+								class="g-footer__img"
+								src="./assets/proyect/batman.webp"
+								alt="Batman hecho de legos"
+								title="Batman hecho de legos"
+							/>
+						</figure>
+					</button>
+				</li>
+			</ul>
 		</footer>
 		<script type="module" src="./index.ts"></script>
 		<script type="application/ld+json">
