:white_check_mark: Clase N°9: Cómo acceder al DOM con JavaScript.

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 			<div class="a-circle g-loader__circle"></div>
 		</section>
 		<!-- Modal -->
-		<!-- <section></section> -->
+		<section id="modal" class="g-modal hidden"></section>
 		<footer class="g-footer">
 			<ul class="g-footer__characters">
 				<li class="g-footer__list">
-					<button class="g-footer__btn">
+					<button id="button-spiderman" class="g-footer__btn">
 						<figure class="g-footer__img-container">
 							<img
 								class="g-footer__img"
@@ -98,7 +98,7 @@
 					</button>
 				</li>
 				<li class="g-footer__list">
-					<button class="g-footer__btn">
+					<button id="button-robin" class="g-footer__btn">
 						<figure class="g-footer__img-container">
 							<img
 								class="g-footer__img"
@@ -110,7 +110,7 @@
 					</button>
 				</li>
 				<li class="g-footer__list">
-					<button class="g-footer__btn">
+					<button id="button-batman" class="g-footer__btn">
 						<figure class="g-footer__img-container">
 							<img
 								class="g-footer__img"
