:white_check_mark: Clase N°10: Modal: evento click con JavaScript.

--- a/index.html
+++ b/index.html
@@ -82,11 +82,19 @@
 			<div class="a-circle g-loader__circle"></div>
 		</section>
 		<!-- Modal -->
-		<section id="modal" class="g-modal hidden"></section>
+		<section id="modal" class="g-modal hidden">
+			<article class="g-modal__content">
+				<button id="button-close" class="g-modal__btn-close">
+					<figure>
+						<img src="./assets/proyect/close-icon.webp" alt="" />
+					</figure>
+				</button>
+			</article>
+		</section>
 		<footer class="g-footer">
 			<ul class="g-footer__characters">
 				<li class="g-footer__list">
-					<button id="button-spiderman" class="g-footer__btn">
+					<button class="g-footer__btn button-hero">
 						<figure class="g-footer__img-container">
 							<img
 								class="g-footer__img"
@@ -98,7 +106,7 @@
 					</button>
 				</li>
 				<li class="g-footer__list">
-					<button id="button-robin" class="g-footer__btn">
+					<button class="g-footer__btn button-hero">
 						<figure class="g-footer__img-container">
 							<img
 								class="g-footer__img"
@@ -110,7 +118,7 @@
 					</button>
 				</li>
 				<li class="g-footer__list">
-					<button id="button-batman" class="g-footer__btn">
+					<button class="g-footer__btn button-hero">
 						<figure class="g-footer__img-container">
 							<img
 								class="g-footer__img"
