:mag: Se agregarón los meta datos y json para el SEO.
Falta agregar el link de la web ya en producción.

--- a/index.html
+++ b/index.html
@@ -4,27 +4,39 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="" />
+		<meta name="description" content="Una página de LEGO con animaciones" />
 		<meta name="robots" content="index,follow" />
 		<meta property="og:url" content="https://galeedgutierrez.com" />
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Galeed Gutierrez" />
-		<meta property="og:description" content="" />
+		<meta
+			property="og:description"
+			content="Una página de LEGO con animaciones"
+		/>
 		<meta property="og:title" content="Galeed Gutierrez" />
-		<meta property="og:image" content="" />
-		<meta property="og:image:alt" content="" />
-		<meta property="og:image:width" content="" />
-		<meta property="og:image:height" content="" />
+		<meta
+			property="og:image"
+			content="https://github.com/GaleedGutierrez/Curso-Practico-de-Maquetacion-y-Animaciones-con-CSS-2021/raw/main/assets/readme/screenshot.webp"
+		/>
+		<meta property="og:image:alt" content="Imagen del proyecto" />
+		<meta property="og:image:width" content="1022" />
+		<meta property="og:image:height" content="570" />
 		<meta property="og:locale" content="es_ES" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Galeed Gutierrez" />
-		<meta name="twitter:description" content="" />
-		<meta name="twitter:image" content="" />
+		<meta
+			name="twitter:description"
+			content="Una página de LEGO con animaciones"
+		/>
+		<meta
+			name="twitter:image"
+			content="https://github.com/GaleedGutierrez/Curso-Practico-de-Maquetacion-y-Animaciones-con-CSS-2021/raw/main/assets/readme/screenshot.webp"
+		/>
 		<meta name="twitter:site" content="@galeedgutierrez" />
 		<meta name="twitter:creator" content="@galeedgutierrez" />
-		<meta name="title" content="" />
-		<link rel="icon" type="image/ico" href="" />
-		<title>Document</title>
+		<meta name="title" content="LEGO" />
+		<link rel="icon" type="image/ico" href="./assets/proyect/favicon.ico" />
+		<title>LEGO</title>
 	</head>
 	<body class="g-page">
 		<header class="g-header">
@@ -199,20 +211,14 @@
 		<script type="module" src="./src/index.ts"></script>
 		<script type="application/ld+json">
 			{
-				"@context": "http://schema.org/",
-				"@type": "WebApplication",
-				"name": "Encriptador de texto",
-				"offers": {
-					"@type": "Offer",
-					"price": "0"
-				},
-				"browserRequirements": "HTML5, CSS3, JAVASCRIPT",
-				"applicationCategory": "EducationalApplication",
-				"applicationSubCategory": "Encriptador y desencriptador",
-				"operatingSystem": "All",
-				"screenshot": "https://github.com/GaleedGutierrez/Encriptador-de-texto-Alura-Challenges-ONE-2023/blob/main/assets/readme/screenshot.webp",
-				"softwareVersion": "1.0.0",
-				"abstract": "Encriptador y desencriptador de texto"
+				"@context": "https://schema.org",
+				"@type": "WebSite",
+				"url": "LINK",
+				"name": "LEGO",
+				"about": {
+					"description": "Una página de LEGO con animaciones",
+					"image": "https://github.com/GaleedGutierrez/Curso-Practico-de-Maquetacion-y-Animaciones-con-CSS-2021/raw/main/assets/readme/screenshot.webp"
+				}
 			}
 		</script>
 		<script
