:mag: Link agregados.
En los metadatos de url ya fueron agregados los link y también en el README del proyecto.

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			{
 				"@context": "https://schema.org",
 				"@type": "WebSite",
-				"url": "LINK",
+				"url": "https://galeedgutierrez.com/Curso-Practico-de-Maquetacion-y-Animaciones-con-CSS-2021/dist/",
 				"name": "LEGO",
 				"about": {
 					"description": "Una página de LEGO con animaciones",
